# rust-grpc-messaging

./: .env  Cargo.toml  README  build.rs
client-grpc-messaging/: envoy.yaml  package-lock.json  package.json
client-grpc-messaging/src/: App.js  Message.js  SideBar.js  SideBarButton.js  TextBar.js  index.js
client-grpc-messaging/src/Contexts/: GrpcContext.js  IoContext.js  UserDataContext.js
client-grpc-messaging/src/proto_js/: chat_grpc_web_pb.js  chat_pb.js
grpc-messaging/: .env  Cargo.toml  build.rs
grpc-messaging/src/: client.rs  server.rs
grpc-messaging/src/utilities/: chat_grpc.rs  dynamo_operations.rs  socket_handler.rs
proto/: chat.proto  chat_grpc_web_pb.js  chat_pb.js
src/: client.rs  lib.rs  server.rs  utilities.rs
src/utilities/: chat_grpc.rs  dynamo_operations.rs  socket_handler.rs
