[package]
version = "0.1.0"
name = "grpc-messaging"
edition = "2021"

# server binary
[[bin]]
    name = "chat-server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"

[dependencies]

tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
aws-sdk-dynamodb = "1.3.0"
aws-config = "1.5.3"
dotenv = "0.15.0"
aws-sdk-keyspaces = "1.34.0"
tokio-stream = {version = "0.1.15", features = ["sync"] }
socketioxide = {version = "0.14.0", features = ["state"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
axum = "0.7.5"
tower = "0.4.13"
tonic-web = "0.12.0"
tower-http = "0.5.2"

[build-dependencies]
tonic-build = "0.12"

